few kms tests - abort - drm_WARN_ON(!queue_delayed_work(system_unbound_wq, &power_domains->async_put_work, msecs_to_jiffies(delay_ms)))
<7> [961.040804] [drm:drm_helper_probe_single_connector_modes] [CONNECTOR:269:DP-2]
<7> [961.040809] i915 0000:00:02.0: [drm:intel_dp_detect [i915]] [CONNECTOR:269:DP-2]
<7> [961.041147] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling PW_2
<7> [961.041373] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling AUX_USBC2
<7> [961.543610] i915 0000:00:02.0: [drm:hsw_wait_for_power_well_enable [i915]] AUX_USBC2 power well enable timeout
<7> [961.545370] i915 0000:00:02.0: [drm:intel_tc_port_update_mode [i915]] Port E/TC#2: TC port mode reset (disconnected -> legacy)
<4> [961.547084] ------------[ cut here ]------------
<4> [961.547165] i915 0000:00:02.0: drm_WARN_ON(!queue_delayed_work(system_unbound_wq, &power_domains->async_put_work, msecs_to_jiffies(delay_ms)))
<4> [961.547239] WARNING: CPU: 14 PID: 1487 at drivers/gpu/drm/i915/display/intel_display_power.c:627 queue_async_put_domains_work+0xb6/0xd0 [i915]
<4> [961.548055] Modules linked in: i915 vgem drm_shmem_helper snd_hda_codec_hdmi snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm prime_numbers i2c_algo_bit ttm drm_buddy r8153_ecm cdc_ether usbnet x86_pkg_temp_thermal coretemp kvm_intel kvm r8152 crct10dif_pclmul video crc32_pclmul wmi_bmof mii ghash_clmulni_intel mei_me e1000e i2c_i801 mei ptp pps_core i2c_smbus intel_lpss_pci wmi [last unloaded: i915]
<4> [961.548260] CPU: 14 PID: 1487 Comm: kworker/u64:0 Tainted: G U 6.9.0-rc3-drmtip_1537-g4c4b322dc08c+ #1
<4> [961.548274] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P DDR4 RVP, BIOS RPLPFWI1.R00.4035.A00.2301200723 01/20/2023
<4> [961.548283] Workqueue: events_unbound intel_display_power_put_async_work [i915]
<4> [961.548931] RIP: 0010:queue_async_put_domains_work+0xb6/0xd0 [i915]
<4> [961.549106] Code: 4c 8b 67 50 4d 85 e4 75 03 4c 8b 27 e8 53 e9 37 e1 48 c7 c1 c0 86 80 a0 4c 89 e2 48 c7 c7 b3 fc 83 a0 48 89 c6 e8 ea 60 b8 e0 <0f> 0b 5b 5d 41 5c 41 5d c3 cc cc cc cc 66 66 2e 0f 1f 84 00 00 00
<4> [961.549109] RSP: 0018:ffffc90001ed3db8 EFLAGS: 00010286